--- a/.github/workflows/py-checks.yml
+++ b/.github/workflows/py-checks.yml
@@ -8,13 +8,14 @@ on:
       - main
     paths:
       - '**.py'
-jobs:  
+jobs:
   ruff-check:
     name: Check syntax
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
         with:
+          fetch-depth: 0
           repository: ${{ github.event.pull_request.head.repo.full_name }}
       - name: Get py files changed
         id: get-files
