--- a/.github/workflows/py-checks.yml
+++ b/.github/workflows/py-checks.yml
@@ -12,17 +12,21 @@ jobs:
   ruff-check:
     name: Check syntax
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: read
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
+          persist-credentials: false
           fetch-depth: 0
           repository: ${{ github.event.pull_request.head.repo.full_name }}
       - name: Get py files changed
-        id: get-files
-        # In this step, we get the names of all the *.py files changed before the push/pull_request event
-        # and replaces the newlines with spaces so github actions understands the input in the next step
-        run: echo "files=$(git diff --name-only ${{ github.event.before }} ${{ github.event.after }} -- '*.py' | tr '\n' ' ')" >> $GITHUB_OUTPUT
-      - uses: chartboost/ruff-action@v1
+        id: get-files-changed
+        uses: tj-action/changed-files@v39
         with:
-          src: "${{ steps.get-files.outputs.files }}"
+          files: '**.py'
+      - name: Ruff check
+        uses: chartboost/ruff-action@v1
+        with:
+          src: "${{ steps.get-files-changed.outputs.all_changed_files }}"
           args: "check --format github --preview --config .ruff.toml"
